[project]
name = "advent-o-code"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "carterwward", email = "Carter.Ward@uvm.edu"},
]
dependencies = [
    "pandas>=2.2.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "None"}


[tool.pdm]
distribution = false
